# hibernate-tester

./: .gitignore  CMakeLists.txt  README.md  client.sh  helpers.cc  helpers.hpp  hibernate-test.cc  hibernate-tester.kdev4  module-collection.cc  module-collection.hpp  protocol-spec.txt  server.cc  server.hpp
testfiles/: round1-knowngood  round2-actuallyloaded  round2-knowngood  round3-actuallyloaded  target-modules
